--- a/final_assignment.html
+++ b/final_assignment.html
@@ -2185,193 +2185,373 @@ Corp
 <tbody>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-수성샐바시온
+HLB글로벌
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000419" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000447" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-한국카본
+에코프로비엠
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000370" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000445" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-LX하우시스
+크리스탈지노믹스
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000288" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000438" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-휴스틸
+고려아연
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000277" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000434" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-HMM
+지엔씨에너지
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000244" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000431" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-RF머트리얼즈
+한화갤러리아
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000182" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000421" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-유니켐
+고려아연
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000164" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000406" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-미래생명자원
+고려아연
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000116" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000402" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-실리콘투
+고려아연
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000087" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000392" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-한화시스템
+로보티즈
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000075" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000386" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-삼성전자
+케이엔제이
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000073" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000385" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-노바렉스
+고려아연
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000040" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000384" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-줌인터넷
+고려아연
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000031" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000375" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-미래에셋글로벌리츠
+더메디팜
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000008" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000369" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-삼성전자
+고려아연
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000004" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000365" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-코람코에너지리츠
+디딤이앤에프
 </td>
 <td style="text-align:left;">
-<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230601000003" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000340" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+나우IB
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000336" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+나라셀라
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000335" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+고려아연
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000332" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+미원에스씨
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000315" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+에프앤가이드
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000306" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+미원홀딩스
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000298" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+케이씨에스
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000180" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+동성케미컬
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000145" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+현대오토에버
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000112" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+SK시그넷
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000101" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+SK시그넷
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000081" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+코렌텍
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000038" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+나우IB
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230612000033" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+KEC
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230609000582" style="     color: #062872 !important;">[기재정정]임원ㆍ주요주주특정증권등소유상황보고서
+</a>
+</td>
+</tr>
+<tr>
+<td style="text-align:left;">
+2023-06-12
+</td>
+<td style="text-align:left;">
+국보
+</td>
+<td style="text-align:left;">
+<a href="https://dart.fss.or.kr/dsaf001/main.do?rcpNo=20230609000583" style="     color: #062872 !important;">임원ㆍ주요주주특정증권등소유상황보고서
 </a>
 </td>
 </tr>
@@ -2406,92 +2586,17 @@ Date
 <tbody>
 <tr>
 <td style="text-align:left;">
-2023-06-01
+2023-06-12
 </td>
 <td style="text-align:left;">
-<a href="http://hkconsensus.hankyung.com/apps.analysis/analysis.downpdf?report_idx=621715" style="     color: #062872 !important;">금호타이어(073240)
-딜러 회귀</a>
-</td>
-<td style="text-align:left;">
-Buy
-</td>
-<td style="text-align:left;">
-IBK투자증권
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-2023-06-01
-</td>
-<td style="text-align:left;">
-<a href="http://hkconsensus.hankyung.com/apps.analysis/analysis.downpdf?report_idx=621714" style="     color: #062872 !important;">국도화학(007690)
-지속적인 증설로 장기 성장성 유지</a>
+<a href="http://hkconsensus.hankyung.com/apps.analysis/analysis.downpdf?report_idx=621886" style="     color: #062872 !important;">LG화학(051910)
+양극재 외판 비중, 2030년까지 40%로 확대</a>
 </td>
 <td style="text-align:left;">
 Buy
 </td>
 <td style="text-align:left;">
 IBK투자증권
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-2023-06-01
-</td>
-<td style="text-align:left;">
-<a href="http://hkconsensus.hankyung.com/apps.analysis/analysis.downpdf?report_idx=621709" style="     color: #062872 !important;">TKG휴켐스(069260)
-올해/내년, 총 생산능력 약 30% 증가 전망</a>
-</td>
-<td style="text-align:left;">
-Buy
-</td>
-<td style="text-align:left;">
-IBK투자증권
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-2023-06-01
-</td>
-<td style="text-align:left;">
-<a href="http://hkconsensus.hankyung.com/apps.analysis/analysis.downpdf?report_idx=621708" style="     color: #062872 !important;">KT&amp;G(033780)
-하반기 NGP신제품 출시, 주주환원확대 기대감 유효</a>
-</td>
-<td style="text-align:left;">
-Buy
-</td>
-<td style="text-align:left;">
-IBK투자증권
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-2023-06-01
-</td>
-<td style="text-align:left;">
-<a href="http://hkconsensus.hankyung.com/apps.analysis/analysis.downpdf?report_idx=621707" style="     color: #062872 !important;">HL홀딩스(060980)
-자체사업 강화로 투자매력 부각</a>
-</td>
-<td style="text-align:left;">
-Buy
-</td>
-<td style="text-align:left;">
-IBK투자증권
-</td>
-</tr>
-<tr>
-<td style="text-align:left;">
-2023-06-01
-</td>
-<td style="text-align:left;">
-<a href="http://hkconsensus.hankyung.com/apps.analysis/analysis.downpdf?report_idx=621705" style="     color: #062872 !important;">신성이엔지(011930)
-수주잔고의 증가는 실적으로 이어진다!</a>
-</td>
-<td style="text-align:left;">
-Not Rated
-</td>
-<td style="text-align:left;">
-유안타증권
 </td>
 </tr>
 </tbody>
